--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,7 +124,10 @@ jobs:
             styles/                              \
             packs/                               \
             language/                            \
-            lang/
+            lang/                                \
+            images/                              \
+            token-art/                           \
+            tokens-bordered/
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
 
